Small spacing fixes, fixed bug when entering a long list name

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,6 +92,8 @@ input {
   justify-content: space-between;
 }
 
+
+
 .flex-row-container {
   display: flex;
   flex: 1 1 auto;
@@ -292,14 +294,15 @@ The following classes are for the list items.
   }
 }
 
+.margin-right {
+  margin-right: 18px;
+}
+
 .main-title {
   display: block;
   min-width: 0;
-  white-space: nowrap;
   text-wrap: nowrap;
-  text-overflow: ellipsis;
   overflow: hidden;
-  margin-right: 18px;
   outline: none;
 }
 
@@ -353,6 +356,7 @@ The following classes are for the list items.
 
 .overflow {
   white-space: nowrap;
+  text-wrap: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
